# ACScript

./: .gitignore  CMakeLists.txt  README.md
_zsrc_vm/: ExternalsManager.cpp
acs_lib/: Core.acs  System.acs  general.acs
compiler/: acsc.ml  ast.ml  codedump.ml  dune  ir.ml  irTranslator.ml  jscodedump.ml  lexer.ml  parser.ml  parsing.ml  token.ml  (+2 more)
src_compiler/: AST2IRTranslator.cpp  AST2IRTranslator.hpp  CMakeLists.txt  CompileException.hpp  Exceptions.ml  acsbTarget.ml  acsc.ml  ast.ml  bundle.ml  compile.cpp  dune  generics.ml  ir.ml  ir_dependency_graph.ml  ir_translate.ml  lexer.mll  main.cpp  modulesCollection.ml  optimization_dead_code_removal.ml  optimization_literal_inlining.ml  optimization_symbol_inlining.ml  parser.mly  parsing.ml  semanticAnalysis.ml  semantic_ast.ml  semantic_ast_print.ml  simplified_ast.ml  symbolTable.ml  symbol_dependency_graph.ml  symbol_evaluator.ml  type_evaluation.ml  type_inference.ml  type_system.ml
src_compiler/AST/: ASTNode.hpp  ASTVisitor.hpp  AllNodes.hpp  CMakeLists.txt  External.hpp  Node.hpp  Parser.cpp  Parser.hpp  ParserState.hpp
src_compiler/AST/expressions/: CallExpression.hpp  Expression.hpp  ExpressionList.hpp  FunctionExpression.hpp  IdentifierExpression.hpp  NaturalLiteralExpression.hpp  ObjectExpression.hpp  SelectExpression.hpp  TupleExpression.hpp
src_compiler/AST/leftValues/: IdentifierLeftValue.hpp  LeftValue.hpp
src_compiler/AST/statements/: ExpressionStatement.hpp  ExternalDeclarationStatement.hpp  ReturnStatement.hpp  Statement.hpp  StatementBlock.hpp  TypeDeclarationStatement.hpp  VariableDefinitionStatement.hpp
src_compiler/AST/typeSpecifications/: FunctionTypeSpec.hpp  IdentifierTypeSpec.hpp  TupleTypeSpec.hpp  TypeSpec.hpp
src_compiler/AST/visitors/: ExpressionVisitor.hpp  StatementVisitor.hpp  TypeSpecVisitor.hpp
src_compiler/IR/: BasicBlock.hpp  Builder.hpp  CMakeLists.txt  ConstantFloat.hpp  ConstantString.hpp  Environment.hpp  External.hpp  Instruction.hpp  Module.hpp  NullValue.hpp  ObjectValue.cpp  ObjectValue.hpp  Parameter.hpp  Procedure.hpp  Scope.hpp  Symbol.hpp  TupleValue.hpp  Value.hpp
src_compiler/IR/instructions/: BranchOnTrueInstruction.hpp  CallInstruction.hpp  CreateNewObjectInstruction.cpp  CreateNewObjectInstruction.hpp  CreateNewTupleInstruction.hpp  ExternalCallInstruction.hpp  ReturnInstruction.hpp  SelectInstruction.hpp  StoreInstruction.hpp
src_compiler/IR/visitors/: AllSymbols.hpp  BasicBlockVisitor.hpp  Printer.cpp  Printer.hpp  ValueVisitor.hpp  Visitor.hpp
src_compiler/acsb/: CMakeLists.txt  Compiler.cpp  Compiler.hpp  Disassembler.cpp  Disassembler.hpp
src_compiler/llvm/: CMakeLists.txt  llvmCompiler.cpp  llvmCompiler.hpp  llvm_main.cpp
src_compiler/optimization/: BackwardsEvaluator.cpp  BackwardsEvaluator.hpp  CMakeLists.txt  CallGraph.hpp  DependencyGraph.hpp  ForwardEvaluator.hpp  PassManager.hpp  ProcedureTransformer.hpp  ValueEvaluator.hpp
src_compiler/optimization/typeInference/: ProcedureTypeInferer.cpp  ProcedureTypeInferer.hpp  ProcedureTypeReplacer.hpp
src_compiler/translation/: AST2IRTranslator.cpp  AST2IRTranslator.hpp  ASTFunction2IRTranslator.cpp  ASTFunction2IRTranslator.hpp  CMakeLists.txt  PatternMatching2IRTranslator.cpp  PatternMatching2IRTranslator.hpp  TypeEvaluator.cpp  TypeEvaluator.hpp
src_compiler/types/: CMakeLists.txt  FunctionType.hpp  GenericType.hpp  LeafType.hpp  ObjectType.hpp  TupleType.hpp  Type.hpp  TypeCatalog.hpp  TypeVisitor.hpp
src_vm/: CMakeLists.txt  ExternalsManager.cpp  ExternalsManager.hpp  GCObject.hpp  GarbageCollector.hpp  MarkAndSweepGC.cpp  MarkAndSweepGC.hpp  Module.cpp  Module.hpp  Opcode.hpp  RuntimeValue.hpp  VM.cpp  VM.hpp  main.cpp
(+112 files in other folders)
