add_subdirectory(externals)

set(SOURCE_FILES_VM
	${SOURCE_FILES_VM}

	${CMAKE_CURRENT_SOURCE_DIR}/ExternalsManager.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/ExternalsManager.hpp
	${CMAKE_CURRENT_SOURCE_DIR}/GarbageCollector.hpp
	${CMAKE_CURRENT_SOURCE_DIR}/main.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/Module.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/Module.hpp
	${CMAKE_CURRENT_SOURCE_DIR}/RuntimeValue.hpp
	${CMAKE_CURRENT_SOURCE_DIR}/VM.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/VM.hpp

	PARENT_SCOPE)